--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse navbar-fixed-bottom">
   <div class="container-fluid">
-        <p class="navbar-text navbar-left">You are logged in from '<%= ip %>'</p>
+        <p class="navbar-text navbar-left">You are accessing in from '<%= ip %>'</p>
   </div>
 </nav>
