--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -38,7 +38,7 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
     <body>
-        <%- include('partials/header', {user: user}) %>
+        <%- include('../partials/header', {user: user}) %>
 
         <div class="container">      
             <div class="panel panel-default">
@@ -137,7 +137,7 @@ $(function ()
 
         $.ajax(
         {
-            url: '/api/profile/update',
+            url: '/admin/api/update-profile',
             type: "POST",
             xhrFields: {
                 withCredentials: true
@@ -176,7 +176,7 @@ $(function ()
 </script>
         </div>
 
-        <%- include('partials/footer', {user: user}) %>
+        <%- include('../partials/footer', {user: user}) %>
     </body>
 </html>
 
