Fix connected users list.

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -115,7 +115,7 @@
                     {
                         $.ajax(
                             {
-                                url: '/api/listClients',
+                                url: '/admin/api/list-clients',
                                 type: "GET",
                                 xhrFields: {
                                     withCredentials: true
