--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -71,8 +71,12 @@
         }
     </style>
 
+    <!-- 
     <script src="/js/quill.js"></script>
-    <link rel="stylesheet" href="/css/quill.snow.css">
+    <link rel="stylesheet" href="/css/quill.snow.css"> 
+    --> 
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 
     <script src="/js/jquery-3.2.1.min.js"></script>
 
@@ -87,9 +91,7 @@
 
     <script src="/js/cryptojslib/rollups/aes.js"></script>
     <script src="/js/cryptojslib/rollups/pbkdf2.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js" 
-        integrity="sha256-lDaoGuONbVHFEV6ZW3GowBu4ECOTjDE14hleNVBvDW8="
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/3.1.1/socket.io.min.js" integrity="sha384-gDaozqUvc4HTgo8iZjwth73C6dDDeOJsAgpxBcMpZYztUfjHXpzrpdrHRdVp8ySO" crossorigin="anonymous"></script>
     
     <script src="/js/moment.js"></script>
     <script src="/js/bundle.js"></script>
